[build-system]
requires = ["setuptools>68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urban-data-preparation-layer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyspark>=3.0.0",
    "pandas>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]